refactor friend service: extract config to properties, route Http calls through UserClient